--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     background: #613EEA;
-    height: 60px;
+    min-height: 60px;
 
     .header-wrapper {
         display: flex;
