--- a/src/index.scss
+++ b/src/index.scss
@@ -18,7 +18,7 @@ html {
   display: flex;
   justify-content: center;
   margin: 0 auto;
-  height: 100vh;
+  height: 100%;
   width: 375px;
   font-family: 'Sarabun', sans-serif;
 
