--- a/src/components/items/items.scss
+++ b/src/components/items/items.scss
@@ -60,6 +60,7 @@
                 padding-bottom: 5px;
                 width: 14px;
                 height: 14px;
+                border: none;
                 border-radius: 50%;
                 background: #F2F3F5;
                 color: #613EEA;
