--- a/src/components/buttons/button.scss
+++ b/src/components/buttons/button.scss
@@ -2,6 +2,7 @@
     background: #613EEA;
     box-shadow: 0px 8px 20px rgba(97, 62, 234, 0.32);
     border-radius: 6px;
+    cursor: pointer;
 }
 
 .btn-buy {
